added sending mail to testing, added romanian translation 95%,  added nuvasuparati email

--- a/config/test.yml
+++ b/config/test.yml
@@ -64,8 +64,8 @@ ADMIN_USERNAME: 'asd'
 ADMIN_PASSWORD: 'qwe'
 
 # Email "from" details
-CONTACT_EMAIL: 'postmaster@localhost'
-CONTACT_NAME: 'Alaveteli Webmaster'
+CONTACT_EMAIL: 'nuvasuparati544@gmail.com'
+CONTACT_NAME: 'Nuvăsupărați.info'
 
 # Where the raw incoming email data gets stored; make sure you back
 # this up!
@@ -119,7 +119,7 @@ GAZE_URL: http://gaze.mysociety.org
 HTML_TO_PDF_COMMAND: /usr/local/bin/wkhtmltopdf-amd64
 
 # Exception notifications
-EXCEPTION_NOTIFICATIONS_FROM: do-not-reply-to-this-address@example.com
+EXCEPTION_NOTIFICATIONS_FROM: nuvasuparati544@gmail.com
 EXCEPTION_NOTIFICATIONS_TO:
 
 MAX_REQUESTS_PER_USER_PER_DAY: 2
