ignore lock and pid files

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ bin/
 config/aliases
 .sass-cache
 .project
+alert-comment-on-request.lock
+alert-new-response-reminders.lock
+alert-not-clarified-request.lock
+alert-overdue-requests.lock
+alert-tracks.pid
+change-xapian-database.lock
+check-recent-requests-sent.lock
+delete-old-things.lock
+load-mail-server-logs.lock
+purge-varnish.pid
+stop-new-responses-on-old-requests.lock
