--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -28,7 +28,7 @@ RequestHeader add X-Forwarded-User %{RU}e
 # Old /files URL to new subdomain (as can't use Alias with passenger,
 # so we do it on its own domain). This is for custom admin upload
 # files for archiving.
-RewriteRule /files/(.+) http://files.whatdotheyknow.com/$1
+RewriteRule /files/(.+) http://files.nuvasuparati.info/$1
 
 # Serve attachments directly from the cache, if possible.
 #
@@ -46,10 +46,10 @@ RewriteRule ^/request/((\d{1,3})\d*)/(response/\d+/attach/(html/)?\d+/.+) /views
 
 <IfModule mod_passenger.c>
  # Set this to something like 100 if you have memory leak issues
- PassengerMaxRequests 500
+ PassengerMaxRequests 100
  PassengerResolveSymlinksInDocumentRoot on
  # Recommend setting this to 3 or less on servers with 512MB RAM
- PassengerMaxPoolSize 6
+ PassengerMaxPoolSize 3
  RailsEnv production
 </IfModule>
 
